[package]
name = "dupsrm"
authors = ["Manuel Amersdorfer"]
version = "0.1.0"
edition = "2021"
description = "Recurse a reference and a root directory, find file duplicates from the reference directory tree in the root directory tree and remove them."
readme = "README.md"
license = "GPL-3.0-or-later"
# license-file = "LICENSE.txt"
keywords = ["files", "duplicates"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
data-encoding = "2.5.0"
log = "0.4"
walkdir = "2.5.0"
clap = { version = "4.5.2", features = ["derive"] }
rayon = "1.9.0"
