[package]
name = "dupsrm"
authors = ["Manuel Amersdorfer"]
version = "0.2.0"
edition = "2021"
description = "Recurse a reference and a root directory, find file duplicates from the reference directory tree in the root directory tree and remove them."
readme = "README.md"
license = "GPL-3.0-or-later"
# license-file = "LICENSE.txt"
keywords = ["files", "duplicates"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
log = "0.4"
walkdir = "2.5.0"
clap = { version = "4.5.2", features = ["derive"] }
rayon = "1.9.0"
env_logger = "0.11.3"
regex = "1.10.3"
sha1 = "0.10.6"
sha3 = "0.10.8"
md-5 = "0.10.6"
whirlpool = "0.10.4"
blake = "2.0.2"
ripemd = "0.1.3"
tiger = "0.2.1"


[dev-dependencies]
assert_cmd = "2.0.14"
criterion = "0.5.1"
lockfile = "0.4.0"
predicates = "3.1.0"
rstest = "0.18.2"
serial_test = "3.0.0"

[profile.release]
debug = 1

[[bench]]
name = "bench_hash_sum"
harness = false
